apps/components/tailscale/ingress/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
spec:
  type: ClusterIP
  ports:
  - name: example
    protocol: TCP
    port: 80
    targetPort: 8080
